--- a/Ekar/Scenes/Vehicle/Vehicle.storyboard
+++ b/Ekar/Scenes/Vehicle/Vehicle.storyboard
@@ -178,8 +178,8 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="42C-Ou-Pnv"/>
                                         </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
